Fix layout issue between logo and heading

--- a/scss/layout/_media-queries.scss
+++ b/scss/layout/_media-queries.scss
@@ -13,6 +13,7 @@
 
     .heading {
         font-size: rem(44px);
+        margin-top: 1em;
         margin-bottom: 0.25em;
     }
 
